--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "iaxixi-max",
-  "version": "0.1.1",
+  "name": "@susiecmy/iaxixi-max",
+  "version": "0.1.9",
   "description": "A modern React UI component library built with TypeScript",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "author": "Susie",
   "license": "MIT",
+  "type": "module",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
@@ -25,24 +26,30 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build:rollup": "rollup -c rollup.config.mjs"
+    "build:rollup": "rollup -c rollup.config.mjs",
+    "publish:npm": "npm publish --registry=https://registry.npmjs.org",
+    "publish:github": "npm publish --registry=https://npm.pkg.github.com",
+    "publish:all": "npm run publish:npm && npm run publish:github"
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
-    "iaxixi-max": "^0.1.0",
+    "@tailwindcss/vite": "^4.1.8",
+    "iaxixi-max": "^0.1.9",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
     "rollup": "^4.6.1",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.0",
     "@eslint/js": "^9.25.0",
     "@storybook/addon-a11y": "^9.0.4",
+    "@storybook/addon-actions": "^9.0.4",
     "@storybook/addon-docs": "^9.0.4",
     "@storybook/addon-onboarding": "^9.0.4",
     "@storybook/addon-vitest": "^9.0.1",
@@ -50,6 +57,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "daisyui": "^5.0.43",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -62,10 +70,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/ui-components.git"
+    "url": "https://github.com/SusieCmy/iaxixi-max.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "bugs": {
-    "url": "https://github.com/your-username/ui-components/issues"
+    "url": "https://github.com/SusieCmy/iaxixi-max/issues"
   },
-  "homepage": "https://github.com/your-username/ui-components#readme"
+  "homepage": "https://github.com/SusieCmy/iaxixi-max#readme"
 }
