更新分页组件，修改组件名称和版本，增加更多配置选项，优化功能和样式。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@susiecmy/iaxixi-max",
-  "version": "0.1.9",
+  "name": "iaxixi-max",
+  "version": "0.1.11",
   "description": "A modern React UI component library built with TypeScript",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
